@@ -93,12 +93,12 @@ public:
     QSet<quint16> updatePlaylist(const QList<Song> &songList, QSet<quint16> controlled);
 
 public Q_SLOTS:
-    void addItems(const QStringList &items, int row);
-    void addItems(const QStringList &items) { addItems(items, -1); }
-    void addFiles(const QStringList &filenames, int row);
+    void addItems(const QStringList &items, int row, bool replace);
+    void addItems(const QStringList &items, bool replace) { addItems(items, -1, replace); }
+    void addFiles(const QStringList &filenames, int row, bool replace);
 
 Q_SIGNALS:
-    void filesAddedInPlaylist(const QStringList filenames, const quint32 row, const quint32 size);
+    void filesAddedInPlaylist(const QStringList filenames, const quint32 row, const quint32 size, bool replace);
     void moveInPlaylist(const QList<quint32> &items, const quint32 row, const quint32 size);
     void statsUpdated(int artists, int albums, int songs, quint32 time);
 
