@@ -28,6 +28,8 @@
 17. Add basic lyrics editing.
 18. Fix order of items added from playlist to playqueue, when individual items
     of the list were selected.
+19. Fix logic of replacing play queue - the clear message is sent in the MPD
+    thread just before the add message.
 
 0.5.1
 -----
